--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Configs
 config_research.json
+config.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+*.npy
 
 # C extensions
 *.so
